Remove Dead Code, reoganise files